fix(spin-java-module): stop forcing --enable-preview unconditionally on modular compiles and javadoc (#239)